<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="message_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_hint">Поиск</string>
    <string name="share_app_link" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_mail_title">Сообщение разработчику Playlist Maker</string>
    <string name="support_mail_text">Спасибо разработчику за крутое приложение!</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update_button">Обновить</string>
    <string name="previously_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="app_version" translatable="false">0.15</string>
    <string name="song_duration">Длительность</string>
    <string name="song_album">Альбом</string>
    <string name="song_year">Год</string>
    <string name="song_genre">Жанр</string>
    <string name="song_country">Страна</string>
    <string name="playing_second" translatable="false">0:00</string>
</resources>