<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="17dp"
    android:paddingBottom="28dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="top"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="?attr/colorPrimary"
            android:gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />
    </LinearLayout>
            <Button
                style="@style/IntentButtonMain"
                android:id="@+id/search_button_main"
                android:text="@string/search_button"
                app:icon="@drawable/search"
                />

            <Button
                style="@style/IntentButtonMain"
                android:id="@+id/library_button_main"
                android:text="@string/media_button"
                app:icon="@drawable/library"
                />

            <Button
                style="@style/IntentButtonMain"
                android:id="@+id/settings_button_main"
                android:text="@string/settings_button"
                app:icon="@drawable/settings"
                />
        </LinearLayout>