<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorSecondary"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SearchActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="6dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_back"
            app:tint="?attr/colorPrimaryVariant" />

        <TextView
            android:text="@string/search_button"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:textFontWeight="500"
            android:layout_marginStart="28dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_search_field"
        tools:context=".SearchActivity"
        android:padding="9dp"
        android:layout_marginBottom="@dimen/icon_size_settings">
    <ImageView
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:src="@drawable/search"
        app:tint="?attr/colorOnSecondary"
        android:layout_marginStart="9dp"
        android:layout_gravity="center_vertical"/>
    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="0dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_marginStart="9dp"
        android:textCursorDrawable="@color/black"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:maxLines="1"
        android:inputType="textNoSuggestions"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textColorHint="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        />
    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:padding="2dp"
        android:id="@+id/clearIcon"
        android:src="@drawable/cross"
        tools:ignore="ContentDescription"
        app:tint="?attr/colorOnSecondary"
        android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <TextView
        android:id="@+id/previouslySearched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previously_searched"
        android:gravity="center_horizontal"
        android:textSize="19sp"
        android:textColor="?attr/colorPrimaryVariant"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
/>
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <ImageView
        android:id="@+id/errorImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textColor="?attr/colorPrimaryVariant"
        android:visibility="gone"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/errorButton"
        android:visibility="gone"
        android:text="@string/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        android:layout_gravity="center"
        app:cornerRadius="54dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:textColor="?attr/colorSecondary"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearButton"
        android:visibility="gone"
        android:text="@string/clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        android:layout_gravity="center"
        app:cornerRadius="54dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:textColor="?attr/colorSecondary"
        />
</LinearLayout>
</LinearLayout>