<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackActivity"
    android:background="?attr/colorSecondary">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        />
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        android:background="?attr/colorSecondary"
        android:foreground="?attr/selectableItemBackground"
        app:tint="?attr/colorPrimaryVariant" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_border"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        tools:src="@drawable/track_icon_placeholder" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="22sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        tools:text="Shoot to Thrill"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/cover" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        tools:text="AC/DC"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveTrack"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintBottom_toTopOf="@id/playButton"
        android:src="@drawable/plus_icon"
        app:fabCustomSize="61dp"
        android:foreground="?attr/selectableItemBackground"
        android:foregroundGravity="center"
        android:backgroundTint="@color/button_gray"
        app:tint="@color/white"
        app:backgroundTint="@color/button_gray"/>

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        android:src="@drawable/play_icon"
        android:scaleType="fitXY"
        android:background="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/artist"
        app:tint="?attr/colorPrimaryVariant" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:text="@string/playing_second"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteButton"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintBottom_toTopOf="@id/playButton"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        android:src="@drawable/heart_icon"
        app:tint="@color/white"
        app:fabCustomSize="61dp"
        android:foreground="?attr/selectableItemBackground"
        android:foregroundGravity="center"
        android:backgroundTint="@color/button_gray"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintStart_toEndOf="@id/left_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginTop="38dp"
        android:text="@string/song_duration"
        />
    <TextView
        android:id="@+id/duration_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/duration"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimaryVariant"
        tools:text="5:35"/>

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toEndOf="@id/left_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginTop="17dp"
        android:text="@string/song_album"
        />
    <TextView
        android:id="@+id/album_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/album"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimaryVariant"
        tools:text="Elite"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintStart_toEndOf="@id/left_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginTop="17dp"
        android:text="@string/song_year"
        />
    <TextView
        android:id="@+id/year_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimaryVariant"
        tools:text="1999"/>

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintStart_toEndOf="@id/left_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginTop="17dp"
        android:text="@string/song_genre"
        />
    <TextView
        android:id="@+id/genre_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/genre"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimaryVariant"
        tools:text="Рок"/>

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/left_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginTop="17dp"
        android:text="@string/song_country"
        />
    <TextView
        android:id="@+id/country_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/country"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        android:textSize="13sp"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorPrimaryVariant"
        tools:text="США"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>